# Iris

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/backend/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  span.rs  token.rs
crates/compiler/: Cargo.toml
crates/compiler-api/: Cargo.toml
crates/compiler/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/ir/: Cargo.toml
crates/iris-ast/: Cargo.toml
crates/iris-ast-lower/: Cargo.toml
crates/iris-ast-lower/src/: diagnostic.rs  error.rs  expression.rs  hir_gen.rs  items.rs  lib.rs  statement.rs
crates/iris-ast/src/: expression.rs  item.rs  lib.rs  statement.rs
crates/iris-db/: Cargo.toml
crates/iris-db/src/: hir.rs  lexer.rs  lib.rs  parser.rs  scope.rs  source.rs  symbol.rs
crates/iris-diagnostic/: Cargo.toml
crates/iris-diagnostic/src/: codes.rs  errors.rs  lib.rs
crates/iris-driver/: Cargo.toml
crates/iris-driver/src/: lib.rs
crates/iris-driver/src/context/: ctx.rs  mod.rs
crates/iris-driver/src/error/: reporting.rs
crates/iris-driver/src/query/: cache.rs  registry.rs  reporter.rs  slot.rs  state.rs
crates/iris-hir/: Cargo.toml
crates/iris-hir/src/: expression.rs  globals.rs  item.rs  lib.rs  module.rs  statement.rs
crates/iris-interner/: Cargo.toml
crates/iris-interner/src/: lib.rs
crates/iris-lexer/: Cargo.toml
crates/iris-lexer/src/: diagnostic.rs  lex.rs  lib.rs
crates/iris-parser/: Cargo.toml
crates/iris-parser/src/: diagnostic.rs  error.rs  expression.rs  item.rs  lib.rs  parse.rs  statement.rs  stream.rs
crates/iris-span/: Cargo.toml
crates/iris-syntax/: Cargo.toml
crates/semantics/: Cargo.toml
crates/stdlib/: Cargo.toml
crates/tools/: Cargo.toml
crates/vm/: Cargo.toml
docs/: docs.html  simple.md
test/: test.iris
(+67 files in other folders)
