[workspace]
resolver = "2"

members = [
    "crates/common",
    "crates/frontend",
    "crates/semantics",
    "crates/ir",
    "crates/backend",
    "crates/vm",
    "crates/stdlib",
    "crates/tools",
    "crates/compiler", "crates/compiler-api",
]

default-members = [
    "crates/tools",
]

exclude = [
    "target",
]
