[workspace]
resolver = "2"

members = [
    "crates/vm",
    "crates/stdlib",
    "crates/tools",
    "crates/iris-driver",
    "crates/iris-span",
    "crates/iris-diagnostic",
    "crates/iris-ast",
    "crates/iris-hir",
    "crates/iris-interner",
    "crates/iris-syntax",
    "crates/iris-lexer",
    "crates/iris-parser",
    "crates/iris-ast-lower",
    "crates/iris-db",
]

default-members = ["crates/tools"]

exclude = ["target"]
