[package]
name = "iris-ast-lower"
version = "0.1.0"
edition = "2024"

[dependencies]
iris-hir = { path = "../iris-hir" }
iris-interner = { path = "../iris-interner" }
iris-syntax = { path = "../iris-syntax" }
iris-span = { path = "../iris-span" }
iris-diagnostic = { path = "../iris-diagnostic" }
iris-ast = { path = "../iris-ast" }
iris-db = { path = "../iris-db" }
