[package]
name = "iris-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
colored = "2.0"
iris-diagnostic = { path = "../iris-diagnostic" }
iris-span = { path = "../iris-span" }
iris-hir = { path = "../iris-hir" }
iris-syntax = { path = "../iris-syntax" }
iris-ast = { path = "../iris-ast" }
iris-interner = { path = "../iris-interner" }
iris-db = { path = "../iris-db" }
iris-lexer = { path = "../iris-lexer" }
iris-parser = { path = "../iris-parser" }
iris-ast-lower = { path = "../iris-ast-lower" }
